--- a/2019stephen/css/style.css
+++ b/2019stephen/css/style.css
@@ -372,16 +372,18 @@ body.mobile-nav-active {
 /* About Us Section
 --------------------------------*/
 #about {
-  background: #fff;
+  background: #2B2B2B;
   padding: 80px 0; }
+/*
   #about .about-container .background {
     min-height: 300px;
     background: url(../img/about-img.jpg) center top no-repeat;
     margin-bottom: 10px; }
+*/
   #about .about-container .content {
-    background: #fff; }
+    background: #2B2B2B; }
   #about .about-container .title {
-    color: #333;
+    color: #ccc;
     font-weight: 700;
     font-size: 32px; }
     @media (max-width: 768px) {
@@ -392,7 +394,7 @@ body.mobile-nav-active {
     #about .about-container p:last-child {
       margin-bottom: 0; }
   #about .about-container .icon-box {
-    background: #fff;
+    background: #2B2B2B;
     background-size: cover;
     padding: 0 0 30px 0; }
     #about .about-container .icon-box .icon {
@@ -417,7 +419,7 @@ body.mobile-nav-active {
       font-size: 18px;
       text-transform: uppercase; }
       #about .about-container .icon-box .title a {
-        color: #111; }
+        color: #eee; }
     #about .about-container .icon-box .description {
       margin-left: 80px;
       line-height: 24px;
